--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
+                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
                                 </span>
                             </td>
                         </tr>
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gitlab.com">Gitlab 500 error</a>
+                                    <a href="https://medium.com/netflix-techblog/the-end-of-video-coding-40cf10e711a2">The End of Video Coding?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295027">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17302944">
                                         
-                                            116 comments
+                                            72 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sbhn">sbhn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528821680"
+                                            href="https://news.ycombinator.com/user?id=mfrw">mfrw</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528897445"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     119 points
                                 </span>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/netflix-techblog/the-end-of-video-coding-40cf10e711a2">The End of Video Coding?</a>
+                                    <a href="https://gitlab.com">Gitlab 500 error</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17302944">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295027">
                                         
-                                            71 comments
+                                            116 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mfrw">mfrw</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528897445"
+                                            href="https://news.ycombinator.com/user?id=sbhn">sbhn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528821680"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    118 points
+                                    119 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528917607" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528918209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
