--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
+                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
                                 </span>
                             </td>
                         </tr>
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17299209">
                                         
-                                            154 comments
+                                            155 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
@@ -515,7 +515,7 @@
                                             href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528822598"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    352 points
+                                    353 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528917607" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528918209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
