--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
+                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
                                 </span>
                             </td>
                         </tr>
@@ -557,13 +557,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17300893">
                                         
-                                            368 comments
+                                            369 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mhoad">mhoad</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528873230"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    316 points
+                                    318 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528917607" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528918209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
