--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.indiatoday.in/technology/news/story/facebook-confirms-that-it-tracks-how-you-move-mouse-on-the-computer-screen-1258189-2018-06-12">Facebook confirms that it tracks mouse movements</a>
+                                    <a href="https://www.destroyallsoftware.com/blog/2017/the-biggest-and-weirdest-commits-in-linux-kernel-git-history">The Biggest and Weirdest Commits in Linux Kernel Git History (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17301336">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265151">
                                         
-                                            171 comments
+                                            74 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=shahocean">shahocean</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528878945"
+                                            href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528464958"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    324 points
+                                    325 points
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=whatok">whatok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528825162"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    306 points
+                                    307 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528570440"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    290 points
+                                    291 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528924206" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528924808" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
