--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://issuetracker.google.com/issues/35876441#comment104">Google is working on Python 3 for App Engine Standard Environment</a>
+                                    <a href="https://medium.com/netflix-techblog/the-end-of-video-coding-40cf10e711a2">The End of Video Coding?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17300143">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17302944">
                                         
-                                            51 comments
+                                            100 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528862490"
+                                            href="https://news.ycombinator.com/user?id=mfrw">mfrw</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528897445"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     155 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528928408" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528929009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
