--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -299,7 +299,31 @@
                                             href="https://news.ycombinator.com/user?id=rosstex">rosstex</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528862132"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    22 points
+                                    23 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://work.qz.com/1236944/linkedin-amazon-is-a-better-place-to-work-than-google-apple-or-tesla/">Amazon has replaced Google as the best place to work in the US</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17302111">
+                                        
+                                            7 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=dbattaglia">dbattaglia</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528889720"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    9 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=sus_007">sus_007</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528852494"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    15 points
+                                    16 points
                                 </span>
                             </td>
                         </tr>
@@ -441,7 +465,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528929608" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528930207" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
