--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@fritjofsson/do-vcs-really-add-value-founders-say-sometimes-f27bb956eb8c">Do VCs really add value?  Founders say sometimes</a>
+                                    <a href="https://www.howtographql.com/">How to GraphQL – A Fullstack Tutorial for GraphQL</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17283606">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17304559">
                                         
-                                            83 comments
+                                            35 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=imartin2k">imartin2k</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528719439"
+                                            href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528907131"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     181 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528934410" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528935009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
