--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=danielam">danielam</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528896631"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    132 points
+                                    133 points
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17306297">
                                         
-                                            191 comments
+                                            192 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=edwinksl">edwinksl</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gitlab.com">Gitlab 500 error</a>
+                                    <a href="https://newatlas.com/blood-cells-transformed-neurons-stanford/54948/">Stanford research turns human blood cells into functional neurons</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295027">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17303610">
                                         
-                                            116 comments
+                                            5 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sbhn">sbhn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528821680"
+                                            href="https://news.ycombinator.com/user?id=JSeymourATL">JSeymourATL</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528901505"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     119 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528934410" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528935009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
