--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://newatlas.com/blood-cells-transformed-neurons-stanford/54948/">Stanford research turns human blood cells into functional neurons</a>
+                                    <a href="https://gitlab.com">Gitlab 500 error</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17303610">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295027">
                                         
-                                            5 comments
+                                            116 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=JSeymourATL">JSeymourATL</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528901505"
+                                            href="https://news.ycombinator.com/user?id=sbhn">sbhn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528821680"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    118 points
+                                    119 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17305683">
                                         
-                                            34 comments
+                                            36 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=amelius">amelius</a></strong> &nbsp;•&nbsp;
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528934410" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528935009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
