--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/thelarkinn/status/1006746626617008128?s=21">Office 365 is being completely rewritten in JavaScript</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-12/solar-surpasses-gas-and-wind-as-biggest-source-of-new-u-s-power">Solar Surpasses Gas and Wind as Biggest Source of New U.S. Power</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17300893">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17291316">
                                         
-                                            395 comments
+                                            260 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mhoad">mhoad</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528873230"
+                                            href="https://news.ycombinator.com/user?id=adventured">adventured</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528787730"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    347 points
+                                    349 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528935608" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528936209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
