--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1806.04510">Dank Learning: Generating Memes Using Deep Neural Networks</a>
+                                    <a href="https://blog.yellowant.com/tensorflow-js-a-practical-guide-2ed58327c455">Tensorflow.js – A Practical Guide</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17302917">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17303712">
                                         
-                                            35 comments
+                                            29 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nevatiaritika">nevatiaritika</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528897273"
+                                            href="https://news.ycombinator.com/user?id=jaya-yellowant">jaya-yellowant</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528902043"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     156 points
                                 </span>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://issuetracker.google.com/issues/35876441#comment104">Google is working on Python 3 for App Engine Standard Environment</a>
+                                    <a href="https://arxiv.org/abs/1806.04510">Dank Learning: Generating Memes Using Deep Neural Networks</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17300143">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17302917">
                                         
-                                            53 comments
+                                            35 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528862490"
+                                            href="https://news.ycombinator.com/user?id=nevatiaritika">nevatiaritika</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528897273"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     156 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528939808" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528940407" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
