--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -413,7 +413,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17306297">
                                         
-                                            199 comments
+                                            200 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=edwinksl">edwinksl</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gitlab.com">Gitlab 500 error</a>
+                                    <a href="https://www.tudelft.nl/en/2018/tu-delft/delft-scientists-make-first-on-demand-entanglement-link/">Delft scientists make first “on demand” entanglement link</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295027">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17305683">
                                         
-                                            116 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sbhn">sbhn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528821680"
+                                            href="https://news.ycombinator.com/user?id=amelius">amelius</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528913876"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     119 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528939808" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528940407" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
