--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=diminish">diminish</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528870125"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    21 points
+                                    22 points
                                 </span>
                             </td>
                         </tr>
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17300661">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thebootstrapper">thebootstrapper</a></strong> &nbsp;•&nbsp;
@@ -465,7 +465,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528940407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528941008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
