--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,6 +215,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://www.laphamsquarterly.org/water/watermarks">Watermarks: Diving into the fathoms to find life’s fluency</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17306027">
+                                        
+                                            1 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=Thevet">Thevet</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528916541"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    10 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://newatlas.com/psychedelic-medicine-psilocybin-magic-mushrooms-medical-research/54808/">Psychedelic Medicine 101: Psilocybin and the magic of mushrooms</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -465,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528948812" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528949406" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
