--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/how-a-powerful-spy-camera-invented-at-duke-ended-up-in-chinas-hands-1528714895">Invented at Duke, Financed in Beijing: Powerful Camera Shows China’s AI Ambition</a>
+                                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Console/table">Console.table()</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17289232">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17307123">
                                         
-                                            33 comments
+                                            37 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mudil">mudil</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528756617"
+                                            href="https://news.ycombinator.com/user?id=koolba">koolba</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528925365"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    110 points
+                                    111 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528952410" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528953008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
