--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.intel.com/content/www/us/en/security-center/advisory/intel-sa-00145.html">Intel SA-00145: Lazy FP State Restore</a>
+                                    <a href="https://medicalxpress.com/news/2018-06-iq-scores-1970s.amp">Researchers find IQ scores dropping since the 1970s</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17307131">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17302830">
                                         
-                                            77 comments
+                                            197 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lkurusa">lkurusa</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528925406"
+                                            href="https://news.ycombinator.com/user?id=danielam">danielam</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528896631"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    134 points
+                                    135 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528953609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528954207" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
