--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://theoutline.com/post/4920/antarctica-is-screwed-research-climate-change-global-warming-melting">Antarctica is screwed and so are we</a>
+                                    <a href="https://medium.com/@johnjkramer/what-does-a-startup-coo-actually-do-b3180a8d4af4">What does a startup COO actually do?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17305367">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17306116">
                                         
-                                            9 comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nwrk">nwrk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528911851"
+                                            href="https://news.ycombinator.com/user?id=ryougazilla">ryougazilla</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528917275"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    15 points
+                                    13 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528963808" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528964409" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
