--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@johnjkramer/what-does-a-startup-coo-actually-do-b3180a8d4af4">What does a startup COO actually do?</a>
+                                    <a href="https://www.indiegogo.com/projects/potato-pirates-the-tastiest-coding-card-game/reft/17493735/hackernews">Learn Coding Without Computers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17306116">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17303413">
                                         
-                                            1 comments
+                                            8 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ryougazilla">ryougazilla</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528917275"
+                                            href="https://news.ycombinator.com/user?id=adityabatura">adityabatura</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528900329"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    13 points
+                                    19 points
                                 </span>
                             </td>
                         </tr>
@@ -239,17 +239,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.biogeosciences.net/12/4261/2015/bg-12-4261-2015.pdf">Evidence for biological shaping of hair ice (2015) [pdf]</a>
+                                    <a href="https://medium.com/@johnjkramer/what-does-a-startup-coo-actually-do-b3180a8d4af4">What does a startup COO actually do?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17305994">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17306116">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bookofjoe">bookofjoe</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528916283"
+                                            href="https://news.ycombinator.com/user?id=ryougazilla">ryougazilla</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528917275"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     13 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528968609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528969206" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
