--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cntraveler.com/story/nearly-80-percent-of-japans-airbnbs-were-just-removed">Nearly 80% of Japan’s Airbnbs removed in response to new home-share law</a>
+                                    <a href="https://netflix.github.io/pollyjs/#/">Polly.js – Record, replay, and stub HTTP interactions</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17263565">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17308246">
                                         
-                                            321 comments
+                                            62 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528446147"
+                                            href="https://news.ycombinator.com/user?id=zwentz">zwentz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528936128"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    288 points
+                                    290 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528971009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528971607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
