--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://newatlas.com/blood-cells-transformed-neurons-stanford/54948/">Stanford research turns human blood cells into functional neurons</a>
+                                    <a href="https://www.bloomberg.com/news/features/2018-06-12/a-quant-king-and-a-drug-hunter-join-in-a-quest-to-find-new-cures">The Quant King, the Drug Hunter, and the Quest to Unlock New Cures</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17303610">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17293157">
                                         
-                                            7 comments
+                                            48 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=JSeymourATL">JSeymourATL</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528901505"
+                                            href="https://news.ycombinator.com/user?id=daschaefer">daschaefer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528811148"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    126 points
+                                    127 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528971607" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528972210" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
