--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -99,9 +99,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17310483" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
+                                    <a href="http://worldcup.sfg.io/">World Cup API for 2018</a>
                                 </span>
                             </td>
                         </tr>
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17305381" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/getICO/node-android">Node-android – Run Node.js on Android</a>
+                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/dailyjs/how-i-automated-my-job-with-node-js-94bf4e423017">How I Automated My Job</a>
+                                    <a href="https://jamanetwork.com/journals/jamaotolaryngology/fullarticle/2683621">Long-term health risks after having adenoids or tonsils removed in childhood</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265458">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17309343">
                                         
-                                            79 comments
+                                            110 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=codingcoop">codingcoop</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528466591"
+                                            href="https://news.ycombinator.com/user?id=tankerslay">tankerslay</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528951389"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     201 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528978809" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528979411" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
