--- a/jobs/index.html
+++ b/jobs/index.html
@@ -99,9 +99,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17310483" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
+                                    <a href="http://worldcup.sfg.io/">World Cup API for 2018</a>
                                 </span>
                             </td>
                         </tr>
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17305381" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/getICO/node-android">Node-android – Run Node.js on Android</a>
+                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
                                 </span>
                             </td>
                         </tr>
@@ -583,7 +583,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528978809" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528979411" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
