--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -99,9 +99,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17310483" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
+                                    <a href="http://worldcup.sfg.io/">World Cup API for 2018</a>
                                 </span>
                             </td>
                         </tr>
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17305381" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/getICO/node-android">Node-android – Run Node.js on Android</a>
+                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=sbr464">sbr464</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528754804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    491 points
+                                    492 points
                                 </span>
                             </td>
                         </tr>
@@ -413,7 +413,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17300893">
                                         
-                                            418 comments
+                                            419 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mhoad">mhoad</a></strong> &nbsp;•&nbsp;
@@ -485,13 +485,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17307141">
                                         
-                                            116 comments
+                                            117 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528925475"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    356 points
+                                    360 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528978809" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528979411" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
