--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528843382"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    274 points
+                                    275 points
                                 </span>
                             </td>
                         </tr>
@@ -413,13 +413,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17309343">
                                         
-                                            146 comments
+                                            148 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tankerslay">tankerslay</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528951389"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    244 points
+                                    245 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://pfrazee.hashbase.io/blog/dat-and-servers">How do dat:// sites interact with servers?</a>
+                                    <a href="http://www.dailycamera.com/news/boulder/ci_31941127/public-support-high-boulder-moves-fund-citywide-fiber?source=mostpopular">Boulder moves to fund citywide fiber buildout through debt</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295226">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17311620">
                                         
-                                            54 comments
+                                            84 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pfraze">pfraze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528822677"
+                                            href="https://news.ycombinator.com/user?id=crunchlibrarian">crunchlibrarian</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528983975"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    201 points
+                                    205 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528990207" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528990807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
