--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=knuththetruth">knuththetruth</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528942236"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    28 points
+                                    29 points
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=benbreen">benbreen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528917819"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    38 points
+                                    39 points
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17307970">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sudouser">sudouser</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528991409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528992014" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
